Work on unsupervised section
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/shared/latex/unsupervised/clustering-conclusion.tex
+++ b/shared/latex/unsupervised/clustering-conclusion.tex
@@ -1,11 +1,11 @@
 
 \begin{frame}
-  \frametitle{Clustering - Conclusions}
+  \frametitle{Conclusion}
    \imgtw[1.0]{clustering-methods-problems-illustration}
 \end{frame}
 
 \begin{frame}
-  \frametitle{Clustering - Conclusions}
+  \frametitle{Conclusion}
   \begin{center}
     Pas de métrique satisfaisante ! $\Leftarrow$ Théorie de la Décision : \\
     $\;$ \\
