--- a/shared/latex/unsupervised/introduction.tex
+++ b/shared/latex/unsupervised/introduction.tex
@@ -1,6 +1,6 @@
-\begin{frame}
-  \frametitle{Données Non-Suppervisées}
-  Problème : détection de variables cachées, de ``structures'' cachées (clusters, variété topologique (manifold), ...) \\ $\;$ \\
+\begin{frame}{But}
+  Détection de variables cachées, de \og{}structures\fg{} cachées (clusters, variété topologique (manifold), …)
+
   \begin{minipage}[l]{0.69\linewidth}
     \imgtw[0.9]{clustering}
   \end{minipage}\hfill
@@ -9,32 +9,15 @@
   \end{minipage}\hfill
 \end{frame}
 
-\begin{frame}
-  \frametitle{Données Non-Suppervisées}
-  \begin{center}
-    $\approx$ Réduction de Dimensionalité
-  \end{center}
+\begin{frame}{Réduction de Dimensionnalité}
   \imgth[0.8]{pca-nuage}
 \end{frame}
 
-\begin{frame}
-  \frametitle{Données Non-Suppervisées}
-  \begin{minipage}[l]{0.69\linewidth}
-    \imgtw[0.9]{clustering}
-  \end{minipage}\hfill
-  \begin{minipage}[l]{0.29\linewidth}
-    \imgtw[0.9]{globe-libre}
-  \end{minipage}\hfill
-\end{frame}
-
-\begin{frame}
-  \frametitle{Données Non-Suppervisées}
-  Clustering de Clients
+\begin{frame}{Clustering}
+  Par exemple~: Création de segments de clientèle
   \imgtw[0.5]{clustering-clients-2}
 \end{frame}
 
-\begin{frame}
-  \frametitle{Données Non-Suppervisées}
-  Détection d'anomalie :
+\begin{frame}{Détection d'anomalie}
   \imgtw[0.9]{outlier-fish}
 \end{frame}
