--- a/shared/latex/unsupervised/pca-classification-hierarchique-composantes-principales.tex
+++ b/shared/latex/unsupervised/pca-classification-hierarchique-composantes-principales.tex
@@ -1,8 +1,13 @@
+\begin{frame}{Classification Hiérarchique sur Composantes Principales}
+  Réduction de dimension par PCA, puis clustering hiérarchique.
 
-\begin{frame}
-  \frametitle{Classification Hiérarchique sur Composantes Principales (CHCP)}
-  Après réduction de dimension, on procède à un algorithme de classification hiérarchique.
+  \imgth[0.7]{hybrid-pca-hierarchical}
+\end{frame}
+
+\begin{frame}{Exemple}
   \imgth[0.55]{chcp-us-crime-data}
-  Obtenus à partir de données relatives aux crimes aux États-Unis. \\
-  Colonnes d'origine : Population Totale, Meurtres, Viols, Agression
+
+  Obtenus à partir de données relatives aux crimes aux États-Unis.
+
+  Colonnes d'origine : Population Totale, Meurtres, Viols, Agression  
 \end{frame}
