--- a/shared/latex/unsupervised/pca-inverse.tex
+++ b/shared/latex/unsupervised/pca-inverse.tex
@@ -1,23 +1,21 @@
+\begin{frame}{Clustering par PCA}
+  (Souvenez-vous)
 
-\begin{frame}
-  \frametitle{Réduction de la dimensionalité : PCA}
-  (Souvenez-vous) \\
-  Matrice de covariance (resp. corrélation) :
-  \[
-  \frac{1}{N} * \bar{X}^T * \bar{X} \;,\;( \frac{1}{N} * \tilde{X}^T * \tilde{X} )
-  \]
-  \underline{ACP} : \\
-  Retrouver les valeurs et vecteurs propres de de la matrice de covariance (resp. corrélation), donc diagonaliser la matrice carrée obtenue. \\
-  \\
-  Vecteur propre : vecteur permettant de projeter les données \\
-  Valeur propre : ``proportion d'information'' conservée par la projection suivant le vecteur propre correspondant \\
-  Réduction de dimension : On ne projette que suivant le nombre de vecteurs propres voulus
+  \begin{itemize}[<+->]
+    \item Calcul de la matrice de covariance (resp corrélation)~:
+      \[
+      \frac{1}{N} \times \overline{X^T} \times \overline{X}
+      \quad
+      ( \frac{1}{N} \times \widetilde{X^T} \times \widetilde{X} )
+      \]
+    \item Calcul des vecteurs propres de cette matrice~: ce sont les combinaisons linéaires des nouvelles features
+    \item Tri des vecteurs par valeur propre décroissante
+    \item Réduction de dimension : on ne conserve que les $k$ premiers vecteurs propres
+  \end{itemize}
 \end{frame}
 
-\begin{frame}
-  \frametitle{Clustering par ACP}
-    \[
-  \frac{1}{N} * \bar{X} * \bar{X^T} \;,\;( \frac{1}{N} * \tilde{X} * \tilde{X^T} )
-  \]
-  En considérant les individus comme des features et les features comme des individus, les vecteurs propres ayant une grande valeur propre peuvent être considérés comme des centre de cluster d'individus.
+\begin{frame}{Clustering par PCA}
+  Considérer les individus comme des features et les features comme des individus.
+  
+  Les vecteurs propres ayant une grande valeur propre peuvent être considérés comme des centre de cluster d'individus.
 \end{frame}
