--- a/shared/latex/unsupervised/tp-clustering.tex
+++ b/shared/latex/unsupervised/tp-clustering.tex
@@ -1,6 +1,5 @@
-\begin{frame}
-  \frametitle{TP : Clustering}
+\begin{frame}{TP : Clustering}
   \begin{center}
-    \bluelink{https://colab.research.google.com/drive/1lhwD8OXXvqy_8wOVE6P12uPuLTA0DABS}{clustering - TP}
+    \bluelink{https://colab.research.google.com/drive/1lhwD8OXXvqy_8wOVE6P12uPuLTA0DABS}{Clustering --- TP}
   \end{center}
 \end{frame}
