--- a/shared/latex/unsupervised/dbscan.tex
+++ b/shared/latex/unsupervised/dbscan.tex
@@ -1,12 +1,20 @@
 
-\begin{frame}
-  \frametitle{DBSCAN}
-  Density-Based Spatial Clustering of Applications with Noise...\\
-  \\
-  Tant qu'il reste des points non-étiquettés : \\
+\begin{frame}{DBSCAN --- Introduction}
+  Density-Based Spatial Clustering of Applications with Noise…
+
+  \begin{itemize}[<+->]
+    \item Gère le bruit (points sans clusters)
+    \item Fonctionne bien dans la pratique
+  \end{itemize}
+\end{frame}
+
+\begin{frame}{DBSCAN --- Procédé}
+  Tant qu'il reste des points non étiquetés~:
+
   \begin{enumerate}
-  \item Prend un point non-étiquettés au hasard et on regarde son voisinage
-  \item Si (densité > seuil) alors (Nouveau cluster)
+  \item Définir une distance $\epsilon$ et un nombre minimum de voisins $v$
+  \item Prendre un point non-étiqueté au hasard et regarder son $\epsilon$-voisinage
+  \item Si il a $v$ voisins ou plus on crée un nouveau cluster
     \begin{enumerate}
     \item Expansion du cluster de proche en proche dans le voisinage
     \end{enumerate}
@@ -14,47 +22,38 @@
   \end{enumerate}
 \end{frame}
 
-\begin{frame}
-  \frametitle{DBSCAN}
+\begin{frame}{DBSCAN --- Démonstration}
   \imgtw[0.9]{dbscan-1}
 \end{frame}
 
-\begin{frame}
-  \frametitle{DBSCAN}
+\begin{frame}{DBSCAN --- Démonstration}
   \imgtw[0.9]{dbscan-2}
 \end{frame}
 
-\begin{frame}
-  \frametitle{DBSCAN}
+\begin{frame}{DBSCAN --- Démonstration}
   \imgtw[0.9]{dbscan-3}
 \end{frame}
 
-\begin{frame}
-  \frametitle{DBSCAN}
+\begin{frame}{DBSCAN --- Démonstration}
   \imgtw[0.9]{dbscan-4}
 \end{frame}
 
-\begin{frame}
-  \frametitle{DBSCAN}
+\begin{frame}{DBSCAN --- Démonstration}
   \imgtw[0.9]{dbscan-5}
 \end{frame}
 
-\begin{frame}
-  \frametitle{DBSCAN}
+\begin{frame}{DBSCAN --- Démonstration}
   \imgtw[0.9]{dbscan-6}
 \end{frame}
 
-\begin{frame}
-  \frametitle{DBSCAN}
+\begin{frame}{DBSCAN --- Démonstration}
   \imgtw[0.9]{dbscan-7}
 \end{frame}
 
-\begin{frame}
-  \frametitle{DBSCAN}
+\begin{frame}{DBSCAN --- Démonstration}
   \imgtw[0.9]{dbscan-8}
 \end{frame}
 
-\begin{frame}
-  \frametitle{DBSCAN}
+\begin{frame}{DBSCAN --- Démonstration}
   \imgtw[0.9]{dbscan-9}
 \end{frame}
