--- a/shared/latex/unsupervised/tp-dim-reduce.tex
+++ b/shared/latex/unsupervised/tp-dim-reduce.tex
@@ -1,6 +1,5 @@
-\begin{frame}
-  \frametitle{TP : Réduction dimension}
+\begin{frame}{TP : Réduction dimension}
   \begin{center}
-    \bluelink{https://colab.research.google.com/drive/1IidWHFuR3V0jY47UqY_Xl9qB-eBZ3jj6}{PCA - TP}
+    \bluelink{    \bluelink{https://colab.research.google.com/drive/1IidWHFuR3V0jY47UqY_Xl9qB-eBZ3jj6}{PCA --- TP}
   \end{center}
 \end{frame}
