--- a/shared/latex/sequential-data/hmm.tex
+++ b/shared/latex/sequential-data/hmm.tex
@@ -1,49 +1,50 @@
-\begin{frame}
-  \frametitle{Hidden Markov Model}
-  Un modèle de markov où les états générants les observations sont cachés \\
-  Par exemple : diagnostic, capteur bruité, bourse, achats clients, ...
+\begin{frame}{Introduction}
+  Modèle de markov où les états générant les observations sont cachés.
+
+  Par exemple : diagnostic, capteur bruité, bourse, achats clients
+
   \imgth[0.7]{hmm-model-weather}
 \end{frame}
 
-\begin{frame}
-  \frametitle{Hidden Markov Model}
-  Sachant une espace d'oservation O, un HMM est un quadruplet $\{S,\Pi,A,B\}$ où :
-  \begin{itemize}
-  \item $O = \{o_1, \dotsc, o_K \}$ est l'espace des observations,
-  \item $S = \{s_1, \dotsc, s_n \}$ l'espace des états,
-  \item $\pi = \{\pi_1, \dotsc, \pi_n \}$ ,les probabilités des états de départ,
-  \item $A$ la matrice de transition de taille $n\times n$ où $a_{ij} = P(S_j|S_i)$,
-  \item $B$ la matrice d'émission de taille $n\times K$ où $b_{ik} = P(o_k|S_i)$,
-  \item Une séquence d'observations : $X=\{x_1, \dotsc x_T \}$
-  \end{itemize}
+\begin{frame}{Définition}
+  Un HMM est défini par 5 éléments~:
+  \begin{enumerate}[<+->]
+  \item Ses observations possibles $O_i$
+  \item Ses états $S_j$
+  \item Les probabilités de commencer dans un état $\pi_j$
+  \item Ses transitions (matrice $n\times n$ où $T_{jj'} = P(S_j|S_{j'})$
+  \item Ses émissions (matrice $n\times K$ où $E_{ji} = P(o_i|S_j)$)
+  \end{enumerate}
+\end{frame}
+
+\begin{frame}{Exemple sur la météo} 
+  \begin{enumerate}[<+->]
+  \item $O = \{beau,gris,pluie\}$ 
+  \item $S =  [H, L]$
+  \item $\pi = [0.4, 0.6]$
+  \item $T$ est de taille $2 \times 2$ 
+  \item $E$ est de taille $2\times 3$
+  \end{enumerate}
+
+  \onslide<+->{Exemple de séquence d'observations~: (beau, gris, gris, pluie, beau)}
+
+  \onslide<+->{Exemple de séquence d'états cachés liés~: (H, L, L, H, H)}
 \end{frame}
 
 \begin{frame}
   \frametitle{Hidden Markov Model}
-  Exemple sur l'ADN : 
-  \begin{itemize}
-  \item $O = \{A,C,T,G\}$ 
-  \item $S =  \{cheveux, oeil, peau, foie, coeur,\dotsc\,organe_{78}\}$
-  \item $A$ est de taille $78 \times 78$ 
-  \item $B$ est de taille $78\times 4$
-  \item Une séquence d'observations : $X=ATGCGATCTATCGCTAGCCGCGCTATACGCA$
-  \end{itemize}
-\end{frame}
-
-\begin{frame}
-  \frametitle{Hidden Markov Model}
-  Pour en savoir plus sur l'apprentissage de HMM :
-  \begin{itemize}
-  \item Algorithme Forward-Backward (Expectation-Maximisation)
-  \item Algorithme de Baum-Welch
-  \item Viterbi et théorème de Bayes
-  \end{itemize}
+  Pour en savoir plus sur l'apprentissage de HMM, quelques algorithmes à regarder~:
+  \begin{description}[<+->]
+  \item[Forward-Backward] Calcul de la probabilité d'une séquence
+  \item[Baum-Welch] Algorithme EM pour apprendre les paramètres d'un HMM
+  \item[Viterbi] Calcul du chemin d'états cachés le plus probable étant donné des observations
+  \end{description}
 \end{frame}
 
 \begin{frame}
   \frametitle{Hidden Markov Model}
   Utilisations :
-  \begin{itemize}
+  \begin{itemize}[<+->]
   \item Modèle génératif de séquence
   \item Prédiction de classe : un modèle par classe
   \item Découverte de patterns
@@ -54,7 +55,7 @@
 \begin{frame}
   \frametitle{Hidden Markov Model}
   Des imperfections :
-  \begin{itemize}
+  \begin{itemize}[<+->]
   \item L'observation émise par le modèle ne dépend que de l'état courant
   \item L'état ne dépend que de l'état précédent
   \item Algorithme EM donc très sensible à l'initialisation
