--- a/shared/latex/sequential-data/markov-model.tex
+++ b/shared/latex/sequential-data/markov-model.tex
@@ -1,21 +1,42 @@
-\begin{frame}
-  \frametitle{Markov Model}
+\begin{frame}{Markov Model}
   \imgth[0.9]{markov}
 \end{frame}
 
-\begin{frame}
-  \frametitle{Markov Model}
-  Le modèle est estimé par ``comptage'' des transitions d'états \\
-  1: ATGCGATCTATCGCTAGCCGCGCTATACGCA \\
-  2: GATTATAGCTAGCTCGCGCTATATCGCTAGCTAGCTAGCTAGC \\
-  $P(A|T) = \frac{\#TA}{\#TA+\#TC+\#TG+\#TT}$ \\
-  $P(A|C) = \frac{\#CA}{\#CA+\#CC+\#CG+\#CT}$ \\
-  ...
+\begin{frame}{Introduction}
+  \begin{itemize}[<+->]
+    \item Les états représentent les observations
+    \item Les transitions représentent les probabilités qu'une observation en suive une autre
+  \end{itemize}
 \end{frame}
 
-\begin{frame}
-  \frametitle{Markov Model}
-  Utilisations :
+\begin{frame}{Estimation des probabilités}
+  Le modèle est estimé par ``comptage'' des transitions d'états
+
+  \begin{enumerate}[<+->]
+    \item ATGCGATCTATCGCTAGCCGCGCTATACGCA
+    \item GATTATAGCTAGCTCGCGCTATATCGCTAGCTAGCTAGCTAGC
+  \end{enumerate}
+
+  \begin{align*}
+    \onslide<+->{P(A|T) & = \frac{\#TA}{\#TA+\#TC+\#TG+\#TT} \\}
+    \onslide<+->{P(A|C) & = \frac{\#CA}{\#CA+\#CC+\#CG+\#CT}}
+  \end{align*}
+ \end{frame}
+
+\begin{frame}{Ordre du modèle}
+  On peut considérer $n$ éléments passés pour décider de la transition.
+
+  Le modèle sera alors d'ordre $n$.
+
+  On compte dans ce cas les transitions depuis autant d'éléments~:
+
+  \begin{align*}
+    P(A|TG) & = \frac{\#TGA}{\#TGA+\#TGC+\#TGG+\#TGT} \\
+    P(A|CT) & = \frac{\#CTA}{\#CTA+\#CTC+\#CTG+\#CTT}
+  \end{align*}
+\end{frame}
+
+\begin{frame}{Utilisations}
   \begin{itemize}
   \item Modèle génératif de séquence
   \item Prédiction de classe : un modèle par classe
@@ -26,12 +47,11 @@
 
 \begin{frame}
   \frametitle{Markov Model}
-  Des applications où c'est efficace (malgrès des limitations évidentes):
+  Des applications où c'est efficace (malgré des limitations évidentes):
   \begin{itemize}
   \item Premières approximations météo
   \item Thermodynamique
   \item Théorie des files d'attente (télécommunication)
-  \item ...
   \end{itemize}
   \imgth[0.6]{markov}
 \end{frame}
