--- a/shared/latex/sequential-data/sequential-models.tex
+++ b/shared/latex/sequential-data/sequential-models.tex
@@ -1,61 +1,66 @@
-\begin{frame}
-  \frametitle{Les Modèles Récursifs}
-  Des tâches variées :
+\begin{frame}{Tâches variées}
   \begin{itemize}
   \item Prédiction d'une classe
-  \item Prédiction de la suite d'une séquence
+  \item Prédiction de la suite d'une séquence (one step)
+  \item Prédiction de la suite d'une séquence (multi step)
   \item Génération de séquence
-  \item Découverte de Patterns
+  \item Découverte de patterns
   \end{itemize}
 \end{frame}
 
-\begin{frame}
-  \frametitle{Les Modèles Récursifs}
-  Prédiction d'une classe : \\
-  input : $x_i=(1,6,8,4)$ \\
-  output : ``good'' or ``bad''
-  \begin{itemize}
-  \item Son (chant d'oiseau, personne, genre musical, ...)
-  \item Vidéos (film, documentaire, stand up , ...)
-  \item ...
+\begin{frame}{Tâches~: prédiction d'une classe}
+  input : $x_i=(1,6,8,4)$
+
+  output : positif ou négatif (cas binaire)
+
+  \begin{itemize}[<+->]
+    \item Son (chant d'oiseau, personne, genre musical, ...)
+    \item Vidéos (film, documentaire, stand up , ...)
   \end{itemize}
-  Certain modèles permettent de clusteriser (non-supervisée)
+  \onslide<+->{Certain modèles permettent de clusteriser (non-supervisée)}
 \end{frame}
 
-\begin{frame}
-  \frametitle{Les Modèles Récursifs}
-  Prédiction de la suite d'une séquence : \\
-  input : $x_i=(1,2,3,4,5)$ \\
+\begin{frame}{Tâches~: prédiction de la suite d'une séquence (one step)}
+  input : $x_i=(1,2,3,4,5)$
+
   output : 6
-  \begin{itemize}
-  \item Données Économiques
-  \item Comportement Clients
-  \item Météo
-  \item Modèle de Langage
-  \item ...
+
+  \begin{itemize}[<+->]
+    \item Données Économiques
+    \item Comportement Clients
+    \item Météo
+    \item Modèle de Langage
   \end{itemize}
 \end{frame}
 
-\begin{frame}
-  \frametitle{Les Modèles Récursifs}
-  Génération : \\
+\begin{frame}{Tâches~: prédiction de la suite d'une séquence (multi step)}
+  input : $x_i=(1,2,3,4,5)$
+
+  output : (6, 7, 8)
+
+  \begin{itemize}[<+->]
+    \item Traduction automatique
+    \item Données Économiques
+    \item Météo
+  \end{itemize}
+\end{frame}
+
+\begin{frame}{Tâches~: génération}
   input : $x_1=(1,3,5),x_2=(7,9,11)$
+
   output : $(5,7,9)$
-  \begin{itemize}
-  \item Génération de partitions
-  \item Texte vers Voix
-  \item Voix vers Texte
-  \item ...
+
+  \begin{itemize}[<+->]
+    \item Génération de partitions
+    \item Texte vers Voix
+    \item Voix vers Texte
   \end{itemize}
 \end{frame}
 
-\begin{frame}
-  \frametitle{Les Modèles Récursifs}
-  Découverte de Patterns :
-  \begin{itemize}
-  \item Découverte de gènes
-  \item Compression de signal
-  \item Décrire et comprendre des phénomènes
-  \item ...
+\begin{frame}{Tâches : découverte de Patterns}
+  \begin{itemize}[<+->]
+    \item Découverte de gènes
+    \item Compression de signal
+    \item Décrire et comprendre des phénomènes
   \end{itemize}
 \end{frame}
