Fix broken bluelink
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/shared/latex/unsupervised/tp-dim-reduce.tex
+++ b/shared/latex/unsupervised/tp-dim-reduce.tex
@@ -1,5 +1,5 @@
 \begin{frame}{TP : Réduction dimension}
   \begin{center}
-    \bluelink{    \bluelink{https://colab.research.google.com/drive/1IidWHFuR3V0jY47UqY_Xl9qB-eBZ3jj6}{PCA --- TP}
+    \bluelink{https://colab.research.google.com/drive/1IidWHFuR3V0jY47UqY_Xl9qB-eBZ3jj6}{PCA --- TP}
   \end{center}
 \end{frame}
