Refactor the beginning of DPL
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/shared/latex/auto-encoders/autoencoder.tex
+++ b/shared/latex/auto-encoders/autoencoder.tex
@@ -1,40 +1,31 @@
-\begin{frame}
-  \frametitle{Autoencodeurs}
+\begin{frame}{Schéma général}
   \imgtw[0.9]{autoencoder-schema}
 \end{frame}
 
-\begin{frame}
-  \frametitle{Autoencodeurs}
-  Activations linéaire et Loss MSE $\approx$ ACP
+\begin{frame}{Cas linéaire}
+  Activations linéaires et fonction de perte moindre carrés $\approx$ ACP
+
   \imgtw[0.6]{pca-nuage}
 \end{frame}
 
-\begin{frame}
-  \frametitle{Autoencodeurs}
-  Stacked Autoencoder (Empilés)
+\begin{frame}{Auto-encodeurs profonds}
+  Aussi appelées auto-encodeurs empilés.
+
   \imgtw[0.9]{autoencoder-stacked}
 \end{frame}
 
-\begin{frame}
-  \frametitle{Autoencodeurs}
-  Denoising Autoencoder (Débruiteurs)
+\begin{frame}{Auto-encodeurs débruiteurs}
   \imgtw[0.9]{autoencoder-denoising}
 \end{frame}
 
-\begin{frame}
-  \frametitle{Autoencodeurs}
-  Sparse Autoencoder (Épars)
+\begin{frame}{Auto-encodeurs épars}
   \imgtw[0.7]{autoencoder-sparse}
 \end{frame}
 
-\begin{frame}
-  \frametitle{Autoencodeurs}
-  Variational Autoencoder (Variationnels)
+\begin{frame}{Auto-encodeurs variationnels}
   \imgtw[0.9]{autoencoder-variational}
 \end{frame}
 
-\begin{frame}
-  \frametitle{Autoencodeurs}
-  LSTM Autoencoder
+\begin{frame}{Auto-encodeurs LSTM}
   \imgtw[0.9]{autoencoder-lstm}
 \end{frame}
