--- a/shared/latex/neural-networks/deep-optimize.tex
+++ b/shared/latex/neural-networks/deep-optimize.tex
@@ -6,7 +6,7 @@
 \begin{frame}
   \frametitle{Disparition des gradients}
   Vanishing Gradient $\Rightarrow$ utilisation de ReLu plutôt que les sigmoïdes
-  \imgtw[0.9]{relu}
+  \imgtw[0.8]{relu}
 \end{frame}
 
 \begin{frame}
@@ -17,7 +17,7 @@
 \end{frame}
 
 \begin{frame}
-  \frametitle{Algorithme d'otptimisation}
+  \frametitle{Algorithme d'optimisation}
   Optimisateur plus rapide que SGD
   \begin{itemize}
   \item Root Mean Square Propagation (RMSProp)
