--- a/shared/latex/tf-keras-intro/tf-intro.tex
+++ b/shared/latex/tf-keras-intro/tf-intro.tex
@@ -1,15 +1,12 @@
-\begin{frame}
-  \frametitle{TensorFlow}
+\begin{frame}{Introduction}
   \imgth[0.7]{tensorflow_logo}
 \end{frame}
 
-\begin{frame}
-  \frametitle{TensorFlow}
+\begin{frame}{Structure de l'API}
   \imgth[0.7]{tensorflow-hierarchy}
 \end{frame}
 
-\begin{frame}
-  \frametitle{TensorFlow}
+\begin{frame}{Concept de base~: graphe de calcul}
   \begin{minipage}[l]{0.15\linewidth}
       $\;$
   \end{minipage}\hfill
