--- a/shared/latex/auto-encoders/tp.tex
+++ b/shared/latex/auto-encoders/tp.tex
@@ -1,13 +1,9 @@
 \begin{frame}
   \frametitle{Travaux Pratiques}
   \begin{center}
-    \bluelink{https://colab.research.google.com/drive/1ALCyDov1v00Nk1qrIKDqWYNbHgG66L_M}{Keras - Autoencodeurs - Simple}
-  \end{center}
-\end{frame}
-
-\begin{frame}
-  \frametitle{Travaux Pratiques}
-  \begin{center}
-    \bluelink{https://colab.research.google.com/drive/1wLL0PVm8_bCwFsVUMSfqdPaQ1eFSfrwj}{Keras - Autoencodeurs - Débruiteurs}
+    \begin{itemize}
+      \item \bluelink{https://colab.research.google.com/drive/1ALCyDov1v00Nk1qrIKDqWYNbHgG66L_M}{Auto-encodeurs simples avec Keras}
+      \item \bluelink{https://colab.research.google.com/drive/1wLL0PVm8_bCwFsVUMSfqdPaQ1eFSfrwj}{Auto-encodeurs débruiteurs avec Keras}
+    \end{itemize}    
   \end{center}
 \end{frame}
